samples/_failures_safe/1761650621_f32f4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9ecc22a.c: In function ‘main’:
./samples/SAFE/__tmp_d9ecc22a.c:165:12: error: missing terminating " character
  165 |     printf("Ver
      |            ^~~~
./samples/SAFE/__tmp_d9ecc22a.c:165:5: error: expected expression at end of input
  165 |     printf("Ver
      |     ^~~~~~
./samples/SAFE/__tmp_d9ecc22a.c:165:5: error: expected declaration or statement at end of input
